# HyperLightBCL

./: Cargo.toml  README.md  README_ZH_CN.md  README_ZH_TW.md  package.json
.github/ISSUE_TEMPLATE/: bug_issue.yml  feature_request.yml
BCL-Core/: Cargo.toml
BCL-Core/src/: lib.rs
BCL-Core/src/auth/microsoft/: auth_flow.rs  oauth_login.rs
BCL.Core/: Cargo.toml
BCL.Core/src/auth/microsoft/: devices_code.rs
BCL.Core/src/auth/offline/: offline_uuid.rs
HyperLightBCL-Core/: Cargo.toml
HyperLightBCL-Core/src/auth/microsoft/: auth_flow.rs  devices_code.rs  oauth_login.rs
docs/: CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_ZH_CN.md  CODE_OF_CONDUCT_ZH_TW.md  CODE_OF_CONDUCT_zh_hans.md  CODE_OF_CONDUCT_zh_hant.md  CONTRIBUTING.md  CONTRIBUTING_ZH_CN.md  CONTRIBUTING_ZH_TW.md  CONTRIBUTING_zh_hans.md  CONTRIBUTING_zh_hant.md  README_zh_hans.md  README_zh_hant.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/auth/offline/: offline_uuid.rs
src/auth/: offline_uuid.rs
