[package]
name = "OpenBCLCore"
description = "A Open Source BCL-Launcher Core For Rust"
version = "1.0.0-dev"
license = "GPL-3.0"
repository = "https://github.com/DCR-Studio/OpenBCLCore"
authors = ["TNTyep520 <3345562481@qq.com>"]
edition = "2024"
rust-version = "1.88.0"

[[bin]]
name = "OpenBCLCore"
path = "src/auth/offline_uuid.rs"

[dependencies]
md5 = "0.7.0"
