[package]
name = "OpenBCLCore"
description = "A Open Source BCL-Launcher Core For Rust"
version = "1.0.0-dev"
license = "GPL-3.0"
repository = "https://github.com/DCR-Studio/OpenBCLCore"
authors = ["TNTyep520 <3345562481@qq.com>"]
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "OpenBCLCore"
path = "src/auth/offline_uuid.rs"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true

[dependencies]
md5 = "0.3.8"
regex = "1"
rustyline = "12"
