[package]
name = "OpenBCLCore"
description = "A Open Source BCL-Launcher Core For Rust"
version = "25.8.3-alpha"
license = "GPL-3.0"
repository = "https://github.com/DCR-Studio/OpenBCLCore"
authors = ["TNTyep520 <sbtntyep520@gmail.com>"]
edition = "2021"
rust-version = "1.88.0"

[[bin]]
name = "OpenBCLCore"
path = "src/auth/offline/offline_uuid.rs"

[profile.release]
strip = "debuginfo"
lto = "thin"

[dependencies]
md5 = "0.8"
