[package]
name = "HyperLightBCL-Core"
description = "A HyperLightBCL-Core For Rust"
version = "25.8.3-alpha"
license = "GPL-3.0"
repository = "https://github.com/DCR-Studio/HyperLightBCL"
authors = ["TNTyep520 <sbtntyep520@gmail.com>"]
edition = "2021"
rust-version = "1.88.0"

[profile.release]
strip = "debuginfo"
lto = "thin"

[profile.debug]
strip = "debuginfo"
lto = "thin"

[dependencies]
md5 = "0.3"
mc_auth = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
webbrowser = "1.0.5"
