[package]
name = "HyperLightBCL"
description = "A HyperLightBCL For Minecraft Java Launcher,written in Rust,Tauri"
version = "25.8.3-alpha"
license = "GNU General Public License v3.0"
repository = "https://github.com/DCR-Studio/HyperLightBCL"
homepage = "https://launcher.dcrstudio.top"
authors = ["TNTyep520 <sbtntyep520@gmail.com>"]
rust-version = "1.88.0"
edition = "2021"

[lib]
name = "hyperlightbcl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
lto = true
codegen-units = 1

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
md5 = "0.7.0"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

